2022-02-08  Matt Woodrow  <mattwoodrow@apple.com>

        Return 'none' for the computed style of mask when there are no mask images
        https://bugs.webkit.org/show_bug.cgi?id=236265
        <rdar://88178304>

        Reviewed by Dean Jackson.

        * fast/masking/parsing-mask-expected.txt:
        * fast/masking/parsing-mask.html:

        Updated expected results to expect 'none' for all cases where there isn't an actual mask
        image.

2022-02-08  Diego Pino Garcia  <dpino@igalia.com>

        [GTK] Garden tests failing after r288070

        Unreviewed test gardening.

        * platform/gtk/TestExpectations:

2022-02-07  Jon Lee  <jonlee@apple.com>

        Unreviewed gardening.

        Add fuzzy data to tests.
        * compositing/patterns/direct-pattern-compositing-cover.html:
        * compositing/patterns/direct-pattern-compositing-size.html:
        * css3/calc/block-mask-overlay-image-outset.html:
        * fast/backgrounds/background-opaque-clipped-gradients.html:
        * fast/borders/border-image-repeat-stretch.html:
        * fast/layers/overflow-scroll-transform-border-radius.html:
        * fast/text/international/system-language/hindi-system-font-punctuation.html:
        * fast/text/simple-lines-float.html:
        * http/tests/security/svg-image-with-cached-remote-image.html:
        * svg/clip-path/clip-opacity.html:

2022-02-07  Tyler Wilcock  <tyler_w@apple.com>

        AX: Move node-dependent role computation to AccessibilityNodeObject from AccessibilityRenderObject
        https://bugs.webkit.org/show_bug.cgi?id=236166

        Reviewed by Chris Fleizach.

        Add test to verify ARIA visible objects (e.g. those with `hidden` and
        `aria-hidden="false"`) compute their role and subrole properly based
        on their DOM element.

        * accessibility/aria-visible-element-roles.html: Added.
        * platform/glib/accessibility/aria-visible-element-roles-expected.txt: Added.