@@ -2207,3 +2207,15 @@ pointerevents/mouse [ Failure ]
 imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe_sandbox_anchor_download_allow_downloads.tentative.html [ DumpJSConsoleLogInStdErr Pass Failure ]
 imported/w3c/web-platform-tests/html/semantics/text-level-semantics/the-a-element/a-download-click-404.html [ Pass Failure ]
 http/wpt/html/semantics/text-level-semantics/the-a-element/a-download-click-404.html [ Pass Failure ]
+
+# Test failures from turning GPU Process on by default
+webkit.org/b/234536 webgl/2.0.0/conformance/reading/read-pixels-test.html
+webkit.org/b/234536 webgl/many-contexts-access-after-loss.html
+webkit.org/b/234536 webgl/many-contexts.html
+webkit.org/b/234536 webgl/max-active-contexts-console-warning.html
+webkit.org/b/234536 webgl/max-active-contexts-gc.html
+webkit.org/b/234536 webgl/max-active-contexts-oldest-context-lost.html
+webkit.org/b/234536 webxr/high-performance.html
+webkit.org/b/234536 fast/mediastream/getUserMedia-to-canvas-1.html [ Crash ]
+webkit.org/b/234536 fast/mediastream/getUserMedia-to-canvas-2.html [ Crash ]
+webkit.org/b/234536 webgl/max-active-contexts-webglcontextlost-prevent-default.html [ Timeout ]
